--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Malayalam MN";
+  src: url("/fonts/malayalam-mn.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
